--- a/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/editor.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/editor.html
@@ -2,12 +2,24 @@
     <div ng-show="bag.isPreview">
         <div style="background-image:url({{bag.provider.mapExample}});padding-top: 10px 0 10px 25px;margin:-40px 0 0 -10px;height:100px;">
             <div style="text-align:center">
-                <img ng-src="{{absoluteUrl(model.value.icon.url)}}" style="width:{{model.value.icon.size.width}}px;height:{{model.value.icon.size.height}}px;margin-top:25px;" />
+                <div ng-show="model.value.debug != 1">
+                    <img ng-src="{{absoluteUrl(model.value.icon.url)}}" style="width:{{model.value.icon.size.width}}px;height:{{model.value.icon.size.height}}px;margin-top:25px;" />
+                </div>
+                <div ng-show="model.value.debug == 1">
+                    <h2 style="padding-top:25px;">
+                        DEBUG MODE
+                    </h2>
+                </div>
             </div>
         </div>
     </div>
     <div ng-show="!bag.isPreview">
-        <ng-include src="bag.provider.views.editor">
-        </ng-include>
+        <div ng-show="model.value.debug != 1">
+            <ng-include src="bag.provider.views.editor">
+            </ng-include>
+        </div>
+        <div ng-show="model.value.debug != 0">
+            <textarea style="height:300px;width:100%;margin-top:20px;background-color:khaki;color:black;" spellcheck=false ng-model="model.value" json-text></textarea>
+        </div>
     </div>
 </div>
